# rag-quality-monitor

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: monitor_config.yaml
data/: golden_qa_set.yaml
src/: __init__.py  app.py  chunk_analyzer.py  evaluator.py  golden_qa.py  hallucination.py  monitor.py
tests/: test_chunk_analyzer.py  test_evaluator.py  test_golden_qa.py  test_hallucination.py  test_monitor.py
